<resources>
    <string name="app_name">AppLista</string>
    <string name="txt_titulo">App Lista Android</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_nome_do_curso_Desejado">Nome do Curso</string>
    <string name="txt_hint_edit_telefone_de_contato">Telefone de Contato</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_Salvar">SALVAR</string>
    <string name="txt_button_Finalizar">FINALIZAR</string>
    <string name="txt_seleciona_um_curso">Seleciona um Curso...</string>
</resources>